unpackaged/objects/FamilyInfo__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(OR( MONTH( TODAY() ) &gt; MONTH( DateOfBirth__c ),AND(MONTH( TODAY() ) - MONTH( DateOfBirth__c )=0, DAY( TODAY() ) &gt;= DAY( DateOfBirth__c ))), 
YEAR(TODAY()) - YEAR( DateOfBirth__c ), 
YEAR(TODAY()) - YEAR( DateOfBirth__c )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>年齢</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnshinHospitalizationWaitingPeriod__c</fullName>
        <formula>IF ( OR(ISPICKVAL(InsuranceKind__c, &quot;安心生活&quot;),ISPICKVAL(InsuranceKind__c, &quot;安心NHST&quot;)) = True, 
text(DATE( year(OtaInsuranceShiki__c) ,month(OtaInsuranceShiki__c),day(OtaInsuranceShiki__c)) + 29) , 
&quot;なし&quot; )</formula>
        <label>入院待機期間</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnshinOutpatientWaitingPeriod__c</fullName>
        <formula>IF ( OR(ISPICKVAL(InsuranceKind__c, &quot;安心生活&quot;),ISPICKVAL(InsuranceKind__c, &quot;安心NHST&quot;)) = True, 
text(DATE( year(OtaInsuranceShiki__c) ,month(OtaInsuranceShiki__c),day(OtaInsuranceShiki__c)) + 14) , 
&quot;なし&quot; )</formula>
        <label>外来待機期間</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App_Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_ID_DOB__c</fullName>
        <formula>IF ( ISNULL(DateOfBirth__c),
	MemberNo__c,
	MemberNo__c&amp;&quot;　DOB:&quot;&amp;DateOfBirth_CdFmt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（カード）会員番号・生年月日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarryCost__c</fullName>
        <label>携行品損害</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CommodityCd_txt__c</fullName>
        <label>商品コード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <label>商品</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>メディック</fullName>
                </value>
                <value>
                    <fullName>Prime Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ComplaintKubun__c</fullName>
        <label>苦情区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>なし</fullName>
                </value>
                <value>
                    <fullName>少ない</fullName>
                </value>
                <value>
                    <fullName>やや多い</fullName>
                </value>
                <value>
                    <fullName>多い</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Area__c</fullName>
        <formula>TEXT(MemberShimei__r.CompanyKeiyakuNo__r.KeiyakuArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（契約情報）契約地区</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Company_Code__c</fullName>
        <formula>KeiyakuCompanyName__r.CompanyCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（契約情報）契約会社コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Company_Name__c</fullName>
        <formula>KeiyakuCompanyName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（契約情報）契約会社名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCodes__c</fullName>
        <formula>CASE( CountryName__c , 
&quot;中国&quot;, &quot;CHN&quot;, 
&quot;香港&quot;, &quot;HKG&quot;, 
&quot;日本&quot;, &quot;JPN&quot;, 
&quot;ベトナム&quot;, &quot;VTN&quot;, 
&quot;インド&quot;, &quot;IND&quot;, 
&quot;インドネシア&quot;, &quot;IDN&quot;, 
&quot;フィリピン&quot;, &quot;PHL&quot;, 
&quot;カンボジア&quot;, &quot;KHM&quot;, 
&quot;タイ&quot;,&quot;THA&quot;, 
&quot;シンガポール&quot;,&quot;SGP&quot;, 
&quot;ミャンマー&quot;,&quot;MMR&quot;, 
&quot;スリランカ&quot;,&quot;LKA&quot;, 
&quot;韓国&quot;,&quot;KOR&quot;, 
&quot;台湾&quot;,&quot;TWN&quot;, 
&quot;マレーシア&quot;,&quot;MYS&quot;, 
&quot;ラオス&quot;,&quot;LAO&quot;, 
&quot;バングラデシュ&quot;,&quot;BGD&quot;, 
&quot;北米&quot;,&quot;GNA&quot;, 
&quot;メキシコ&quot;,&quot;MEX&quot;, 
&quot;中南米&quot;, &quot;GLA&quot;, 
&quot;欧州&quot;,&quot;GEU&quot;, 
&quot;オセアニア&quot;,&quot;GOC&quot;, 
&quot;CIS&quot;,&quot;GCI&quot;, 
&quot;中東&quot;,&quot;GME&quot;,
&quot;アフリカ&quot;,&quot;GAF&quot;, 
&quot;&quot;)</formula>
        <label>国コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <label>国名</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region_and_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>カンボジア</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>スリランカ</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>韓国</fullName>
                </value>
                <value>
                    <fullName>台湾</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>ラオス</fullName>
                </value>
                <value>
                    <fullName>バングラデシュ</fullName>
                </value>
                <value>
                    <fullName>北米</fullName>
                </value>
                <value>
                    <fullName>メキシコ</fullName>
                </value>
                <value>
                    <fullName>中南米</fullName>
                </value>
                <value>
                    <fullName>欧州</fullName>
                </value>
                <value>
                    <fullName>オセアニア</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>中東</fullName>
                </value>
                <value>
                    <fullName>アフリカ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DamagesCost__c</fullName>
        <label>賠償金額</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateOfBirth_CdFmt__c</fullName>
        <formula>IF ( CountryCodes__c=&apos;GNA&apos; , 
IF (	ISNULL(DateOfBirth__c),
		&apos;MM/DD/YYYY&apos;,
		RIGHT(TEXT(MONTH(DateOfBirth__c)+ 100), 2) +&quot;/&quot; +RIGHT(TEXT(DAY(DateOfBirth__c)+ 100), 2)+&quot;/&quot; +TEXT(YEAR(DateOfBirth__c))), 
IF (	ISNULL(DateOfBirth__c),
	    &apos;YYYY/MM/DD&apos;,
		TEXT(YEAR(DateOfBirth__c)) +&quot;/&quot; +RIGHT(TEXT(MONTH(DateOfBirth__c)+ 100), 2) +&quot;/&quot; +RIGHT(TEXT(DAY(DateOfBirth__c)+ 100), 2))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（カード）生年月日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <label>生年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DentalTherapy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>（ベトナム）歯科治療</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiseaseCost__c</fullName>
        <label>疾病治療費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiseaseDeathCost__c</fullName>
        <label>疾病死亡</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>メールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>従業員番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FamilyNo__c</fullName>
        <inlineHelpText>会員毎の家族番号です。
会員番号の下1桁に表示されます。</inlineHelpText>
        <label>家族№</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>CASE(InsuranceKind__c, 
&quot;安心生活&quot;, 
CASE(InsurancePlan__c , 
&quot;新A&quot; , &quot;上海第一人民医院手配不可&quot;, 
&quot;新B&quot; , &quot;上海第一人民医院手配不可&quot;, 
&quot;新C&quot; , &quot;上海第一人民医院手配不可&quot;, 
&quot;新D&quot; , &quot;上海第一人民医院手配不可&quot;, 
&quot;新E&quot; , &quot;上海第一人民医院手配不可&quot;, 
&quot;新F&quot; , &quot;上海第一人民医院手配不可&quot;, 
&quot;新G&quot; , &quot;上海第一人民医院手配不可&quot;, 
&quot;新H&quot; , &quot;上海第一人民医院手配不可&quot;, 
&quot;新I&quot; , &quot;上海第一人民医院手配不可&quot;, 
&quot;新S&quot; , &quot;上海第一人民医院手配不可&quot;, 
&quot;新U&quot; , &quot;上海第一人民医院手配不可&quot;, 
&quot;-&quot;), 
&quot;-&quot;)</formula>
        <label>手配注意事項</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formar_Healthcheck_Country__c</fullName>
        <label>前回)健診受診-国</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formar_Healthcheck_Date__c</fullName>
        <label>前回)健診受診-時期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formar_Healthcheck_Facility__c</fullName>
        <label>前回)健診受診-医療機関名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_Result_NOT_WB__c</fullName>
        <formula>TEXT(Healthcheck_NOT_WB__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WB健診以外の健診結果保持</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Healthcheck_NOT_WB__c</fullName>
        <label>WB健診以外の健診</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>なし</fullName>
                    <default>true</default>
                    <label>なし</label>
                </value>
                <value>
                    <fullName>あり</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HomeCountryCoverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>一時帰国中担保</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDN_Attribute__c</fullName>
        <label>（インドネシア）属性</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>従業員（61歳未満）</fullName>
                </value>
                <value>
                    <fullName>従業員（61歳～65歳）</fullName>
                </value>
                <value>
                    <fullName>配偶者（61歳未満）</fullName>
                </value>
                <value>
                    <fullName>配偶者（61歳～65歳）</fullName>
                </value>
                <value>
                    <fullName>子供（4歳未満）</fullName>
                </value>
                <value>
                    <fullName>子供（4歳～23歳）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_KITAS_NO_c__c</fullName>
        <label>（インドネシア）KITAS：一時居住許可証</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportComm__c</fullName>
        <label>取込コメント</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InjuryCost__c</fullName>
        <label>傷害治療費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InjuryDeathCost__c</fullName>
        <label>傷害死亡・後遺障害</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InsuranceCancelContact__c</fullName>
        <label>保険解約連絡事項</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceCancelDate__c</fullName>
        <label>保険解約日付（24時迄）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InsuranceCostAge9__c</fullName>
        <label>（ベトナム）保険料年齢9</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満1歳～満18歳</fullName>
                </value>
                <value>
                    <fullName>満19歳～満30歳</fullName>
                </value>
                <value>
                    <fullName>満31歳～満40歳</fullName>
                </value>
                <value>
                    <fullName>満41歳～満50歳</fullName>
                </value>
                <value>
                    <fullName>満51歳～満60歳</fullName>
                </value>
                <value>
                    <fullName>満61歳～満65歳</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceCostAge__c</fullName>
        <formula>IF ( InsuranceShikiAge__c  &lt;= 17 ,&quot;満0歳～満17歳&quot;,  
IF ( InsuranceShikiAge__c  &lt;= 29 ,&quot;満18歳～満29歳&quot;,
IF ( AND(InsuranceShikiAge__c  &gt;= 65 , InsuranceShikiAge__c  &lt;= 69), &quot;満65歳～満69歳&quot;,
CASE(LEFT(TEXT(InsuranceShikiAge__c),1),
&quot;3&quot;,&quot;満30歳～満39歳&quot;,
&quot;4&quot;,&quot;満40歳～満49歳&quot;,
&quot;5&quot;,&quot;満50歳～満59歳&quot;,
&quot;6&quot;,&quot;満60歳～満64歳&quot;,
&quot;-&quot; )
 ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（ベトナム）保険料年齢</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceCurrency__c</fullName>
        <label>保険金額通貨</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>VND（単位：千VND）</fullName>
                </value>
                <value>
                    <fullName>IDR（単位：千IDR）</fullName>
                </value>
                <value>
                    <fullName>JPY（単位：千円）</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceKindRyaku__c</fullName>
        <formula>CASE( InsuranceKind__c , 
&quot;安心生活&quot;, &quot;安心&quot;, 
&quot;安心NHST&quot;, &quot;安N&quot;,
&quot;駐在中国&quot;, &quot;駐中&quot;,
&quot;優You&quot;, &quot;優Y&quot;,
&quot;Medi-X&quot;, &quot;MX&quot;,
&quot;&quot;)</formula>
        <label>保険種類略称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceKind__c</fullName>
        <inlineHelpText>「安心生活」の場合は、「安心生活」を選択します。</inlineHelpText>
        <label>保険種類</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OtaName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>安心生活</fullName>
                </value>
                <value>
                    <fullName>Happy Life</fullName>
                </value>
                <value>
                    <fullName>安心NHST</fullName>
                </value>
                <value>
                    <fullName>駐在中国</fullName>
                </value>
                <value>
                    <fullName>Happy China</fullName>
                </value>
                <value>
                    <fullName>優You</fullName>
                </value>
                <value>
                    <fullName>新優You</fullName>
                </value>
                <value>
                    <fullName>Medi-X</fullName>
                </value>
                <value>
                    <fullName>ウェルライフ</fullName>
                </value>
                <value>
                    <fullName>OM-S</fullName>
                </value>
                <value>
                    <fullName>Medi Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsurancePlan__c</fullName>
        <label>保険プラン</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>InsuranceKind__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>新A</fullName>
                </value>
                <value>
                    <fullName>新B</fullName>
                </value>
                <value>
                    <fullName>新C</fullName>
                </value>
                <value>
                    <fullName>新D</fullName>
                </value>
                <value>
                    <fullName>新E</fullName>
                </value>
                <value>
                    <fullName>新F</fullName>
                </value>
                <value>
                    <fullName>新G</fullName>
                </value>
                <value>
                    <fullName>新H</fullName>
                </value>
                <value>
                    <fullName>新I</fullName>
                </value>
                <value>
                    <fullName>新S</fullName>
                </value>
                <value>
                    <fullName>新T</fullName>
                </value>
                <value>
                    <fullName>新U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceShikiAge__c</fullName>
        <formula>IF(OR( MONTH( OtaInsuranceShiki__c ) &gt; MONTH( DateOfBirth__c ),AND(MONTH( OtaInsuranceShiki__c) - MONTH( DateOfBirth__c )=0, DAY( OtaInsuranceShiki__c) &gt;= DAY( DateOfBirth__c ))), 
YEAR(OtaInsuranceShiki__c) - YEAR( DateOfBirth__c ), 
YEAR(OtaInsuranceShiki__c) - YEAR( DateOfBirth__c )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保険始期時点年齢</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Card_ID__c</fullName>
        <label>被保険者証の記号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Card_Number__c</fullName>
        <label>被保険者証の番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issues_To_AC__c</fullName>
        <label>AC用伝達事項</label>
        <length>384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issues_from_Sales__c</fullName>
        <label>営業→AC伝達事項</label>
        <length>384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jibyo__c</fullName>
        <label>持病</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>管轄地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CountryName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>台北</fullName>
                </value>
                <value>
                    <fullName>東京</fullName>
                </value>
                <value>
                    <fullName>大阪</fullName>
                </value>
                <value>
                    <fullName>名古屋</fullName>
                </value>
                <value>
                    <fullName>ハノイ</fullName>
                </value>
                <value>
                    <fullName>ホーチミン</fullName>
                </value>
                <value>
                    <fullName>ニューデリー</fullName>
                </value>
                <value>
                    <fullName>チェンナイ</fullName>
                </value>
                <value>
                    <fullName>ジャカルタ</fullName>
                </value>
                <value>
                    <fullName>マニラ</fullName>
                </value>
                <value>
                    <fullName>プノンペン</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>ヤンゴン</fullName>
                </value>
                <value>
                    <fullName>コロンボ</fullName>
                </value>
                <value>
                    <fullName>バンコク</fullName>
                </value>
                <value>
                    <fullName>クアラルンプール</fullName>
                </value>
                <value>
                    <fullName>北米</fullName>
                </value>
                <value>
                    <fullName>メキシコシティ</fullName>
                </value>
                <value>
                    <fullName>欧州</fullName>
                </value>
                <value>
                    <fullName>オセアニア</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeijoMonthInsurance__c</fullName>
        <formula>IF ( MONTH(OtaInsuranceShuki__c) = 12 , 1, MONTH(OtaInsuranceShuki__c) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計上月(保険)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeiyakuCompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>契約会社名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>会員（家族）情報</relationshipLabel>
        <relationshipName>R00N10000000I9MMEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeiyakuCompanyNo__c</fullName>
        <formula>MemberShimei__r.CompanyKeiyakuNo__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuDate_CdFmt__c</fullName>
        <formula>IF ( OR(CountryCodes__c=&apos;USA&apos;,CountryCodes__c=&apos;CAN&apos;) , 
RIGHT(TEXT(MONTH(KeiyakuDate__c)+ 100), 2) +&quot;/&quot; +RIGHT(TEXT(DAY(KeiyakuDate__c)+ 100), 2)+&quot;/&quot; +TEXT(YEAR(KeiyakuDate__c)), 
TEXT(YEAR(KeiyakuDate__c)) +&quot;/&quot; +RIGHT(TEXT(MONTH(KeiyakuDate__c)+ 100), 2) +&quot;/&quot; +RIGHT(TEXT(DAY(KeiyakuDate__c)+ 100), 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（カード）契約日付</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuDate__c</fullName>
        <formula>MemberShimei__r.KeiyakuDate__c</formula>
        <label>契約日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KeiyakuKeitai__c</fullName>
        <label>契約形態</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Commodity__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>法人／家族Global Plus Member</fullName>
                </value>
                <value>
                    <fullName>個人／家族Global Plus Member</fullName>
                </value>
                <value>
                    <fullName>法人／家族Global Member</fullName>
                </value>
                <value>
                    <fullName>法人／家族China</fullName>
                </value>
                <value>
                    <fullName>個人／家族China</fullName>
                </value>
                <value>
                    <fullName>法人／家族Asian</fullName>
                </value>
                <value>
                    <fullName>個人／家族Asian</fullName>
                </value>
                <value>
                    <fullName>法人／家族C&amp;V</fullName>
                </value>
                <value>
                    <fullName>個人／家族C&amp;V</fullName>
                </value>
                <value>
                    <fullName>法人／家族Asian B Plan</fullName>
                </value>
                <value>
                    <fullName>法人／家族</fullName>
                </value>
                <value>
                    <fullName>個人／家族</fullName>
                </value>
                <value>
                    <fullName>チャイナボウルファミリー</fullName>
                </value>
                <value>
                    <fullName>法人／家族Medi-X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeiyakuNo__c</fullName>
        <label>契約№</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keiyaku_Medical_Insurance_EN__c</fullName>
        <formula>MemberShimei__r.Keiyaku_Medical_Insurance_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(契約会社)現地医療保険(英語名)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KinmuCompany__c</fullName>
        <formula>MemberShimei__r.KinmuCompany__r.Name</formula>
        <label>勤務先会社</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KokyakuInfoAc__c</fullName>
        <label>AC用顧客情報</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MailHaishin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>メール配信</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedicalBillKessaiHouhou__c</fullName>
        <label>医療費決済方法</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>海外旅行傷害保険</fullName>
                </value>
                <value>
                    <fullName>ウェルビー現地医療保険</fullName>
                </value>
                <value>
                    <fullName>現地医療保険</fullName>
                </value>
                <value>
                    <fullName>OM-S</fullName>
                </value>
                <value>
                    <fullName>クレジットカード付帯保険</fullName>
                </value>
                <value>
                    <fullName>現金</fullName>
                </value>
                <value>
                    <fullName>立て替え保証</fullName>
                </value>
                <value>
                    <fullName>Health Care Program</fullName>
                </value>
                <value>
                    <fullName>未確認</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
                <value>
                    <fullName>会社積立</fullName>
                </value>
                <value>
                    <fullName>旅行総合保険</fullName>
                </value>
                <value>
                    <fullName>Medi-X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MeiKana__c</fullName>
        <label>名（カナ）</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeiRoma__c</fullName>
        <label>名（ローマ字）</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberCardKeiyakuCompanyName__c</fullName>
        <formula>CASE( ServiceAreaCd__c , 
&quot;C&quot;,  KeiyakuCompanyName__r.Name, 
&quot;&quot;,  KeiyakuCompanyName__r.Name, 
KeiyakuCompanyName__r.CompanyNameEng__c )</formula>
        <label>（カード）契約会社名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberCardMemberNameEng__c</fullName>
        <formula>CASE( ServiceAreaCd__c , 
&quot;GP&quot;,  MeiRoma__c , 
&quot;G&quot;,  MeiRoma__c , 
&quot;C&quot;,  SeiRoma__c &amp; &quot; &quot; &amp; MeiRoma__c , 
MeiRoma__c &amp; &quot; &quot; &amp; SeiRoma__c)</formula>
        <label>（カード）会員英語名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberCardMemberNameKanji__c</fullName>
        <formula>CASE( ServiceAreaCd__c , 
&quot;GP&quot;, SeiRoma__c ,
&quot;G&quot;, SeiRoma__c ,
&quot;C&quot;, Name ,
&quot;&quot; )</formula>
        <label>（カード）会員漢字名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberCardSubTitle__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>（カード）サブタイトル</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberKubunB__c</fullName>
        <formula>CASE(  Commodity__c  , 
&quot;メディック&quot;, IF ( TaikaiDate__c &lt;= TODAY() , &quot;退会者&quot;, &quot;会員&quot;), 
&quot;留学生&quot;, IF ( TaikaiDate__c  &lt;=  TODAY() , &quot;退会者&quot;, &quot;会員&quot;), 
&quot;チャイナボウル&quot;, IF ( TaikaiDate__c  &lt;=  TODAY() , &quot;退会者&quot;, &quot;会員&quot;), 
&quot;ベトナムメディック&quot;, IF ( TaikaiDate__c  &lt;=  TODAY() , &quot;退会者&quot;, &quot;会員&quot;), 
&quot;メディフル&quot;, IF ( TaikaiDate__c  &lt;=  TODAY() , &quot;退会者&quot;, &quot;会員&quot;), 
&quot;Medi-X&quot;, IF ( TaikaiDate__c &lt;= TODAY() , &quot;Medi-X退会者&quot;, &quot;Medi-X会員&quot;), 
&quot;&quot;)</formula>
        <label>会員区分B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberKubun__c</fullName>
        <formula>IF ( AND( ISNULL( TaikaiDate__c ) , TaikaiDate__c  &gt;=  TODAY() ) , &quot;退会者&quot;, &quot;会員&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>会員区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberNo__c</fullName>
        <externalId>true</externalId>
        <label>会員番号</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MemberShimei__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員氏名</label>
        <referenceTo>MemberInfo__c</referenceTo>
        <relationshipLabel>会員（家族）情報</relationshipLabel>
        <relationshipName>FamilyMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <inlineHelpText>入力する際は、
－（ハイフン）を抜いて入力して下さい。
例）　○0335380180
　　　×03-3538-0180</inlineHelpText>
        <label>携帯TEL</label>
        <type>Phone</type>
    </fields>
</CustomObject>